--- a/trombinoscope/trombinoscope.html
+++ b/trombinoscope/trombinoscope.html
@@ -76,11 +76,11 @@
                 padding: 10px;
             }
 
-            .ligne-1, .ligne-2, .ligne-3, .ligne-4, .ligne-5, .ligne-6 {
+            .ligne-1, .ligne-2, .ligne-3, .ligne-4 {
                 display: flex;
                 gap: 10px;
                 justify-content: space-around; /* Espacer les deux personnes sur la ligne */
-                flex-wrap: wrap; /* Permettre le passage à la ligne si nécessaire pour les écrans très étroits */
+                flex-wrap: nowrap; /* Empêcher le passage à la ligne si possible */
             }
 
             .personne {
@@ -89,11 +89,11 @@
                 align-items: center;
                 text-align: center;
                 border: solid 1px #ccc;
-                width: calc(50% - 5px); /* Occuper environ la moitié de la largeur */
+                width: calc(50% - 5px); /* Occuper environ la moitié de la largeur avec un peu de marge */
                 height: auto;
                 border-radius: 10px;
                 padding: 8px;
-                box-sizing: border-box;
+                box-sizing: border-box; /* Inclure le padding et la bordure dans la largeur */
             }
 
             .personne img {
