--- a/trombinoscope/trombinoscope.html
+++ b/trombinoscope/trombinoscope.html
@@ -68,62 +68,45 @@
             text-decoration: underline;
         }
 
-        /* Style pour les écrans de 600px de large ou moins (téléphones) */
+        /* Media Query pour les écrans de 600px de large ou moins (typiquement les téléphones) */
         @media (max-width: 600px) {
             .trombinoscope {
-                grid-template-columns: repeat(1, 1fr); /* Une seule colonne pour le conteneur principal */
-                gap: 10px;
-                padding: 10px;
+                grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); /* Adaptation maximale */
+                gap: 8px;
+                padding: 8px;
             }
 
             .ligne-1, .ligne-2, .ligne-3, .ligne-4 {
-                display: flex;
-                gap: 10px;
-                justify-content: space-around; /* Espacer les deux personnes sur la ligne */
-                flex-wrap: nowrap; /* Empêcher le passage à la ligne si possible */
+                gap: 8px;
             }
 
             .personne {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-                border: solid 1px #ccc;
-                width: calc(50% - 5px); /* Occuper environ la moitié de la largeur avec un peu de marge */
-                height: auto;
-                border-radius: 10px;
-                padding: 8px;
-                box-sizing: border-box; /* Inclure le padding et la bordure dans la largeur */
+                width: 100px;
+                padding: 6px;
+                border-radius: 8px;
             }
 
             .personne img {
-                width: 80px;
-                height: 80px;
-                border-radius: 50%;
-                object-fit: cover;
-                margin-bottom: 3px;
-                border: 1px solid #ccc;
+                width: 50px;
+                height: 50px;
+                margin-bottom: 2px;
             }
 
             .personne h3 {
-                margin-top: 3px;
-                margin-bottom: 1px;
-                font-size: 0.9em;
+                font-size: 0.7em;
             }
 
             .personne p {
-                margin-bottom: 0;
-                font-size: 0.8em;
-                color: #555;
+                font-size: 0.6em;
             }
 
             h1 {
-                font-size: 1.5em;
-                margin-bottom: 15px;
+                font-size: 1.2em; /* Titre plus petit sur mobile */
+                margin-bottom: 10px;
             }
 
             header nav ul {
-                font-size: 1em;
+                font-size: 0.9em; /* Navigation plus petite sur mobile (si elle était affichée) */
             }
         }
     </style>
