--- a/trombinoscope/trombinoscope.html
+++ b/trombinoscope/trombinoscope.html
@@ -154,7 +154,7 @@
             <div class="personne">
                 <img src="images/maxime.jpg" alt="Maxime">
                 <h3>THIERRY Maxime</h3>
-                <p>Classe : [Classe 5]</p>
+                <p>Classe : 1 ERA</p>
                 <p>Fonction : Vice-Secrétaire</p>
             </div>
             <div class="personne">
