--- a/gestion_utilisateurs.html
+++ b/gestion_utilisateurs.html
@@ -66,7 +66,7 @@
 
             if (!authorizedUsers.includes(loggedInUsername)) {
                 // Si l'utilisateur connecté n'est pas autorisé, afficher un message et rediriger
-                alert(`L'utilisateur "${loggedInUsername}" n'a pas l'autorisation d'accéder à la gestion des utilisateurs. Vous allez être redirigé(e).`);
+                alert(`L'utilisateur "${loggedInUsername}" n'a pas l'autorisation d'accéder à la gestion des utilisateurs. Redirection en cours...`);
                 window.location.href = 'page_accueil.html';
                 return false; // Indiquer que l'accès est refusé
             }
