--- a/page_accueil.html
+++ b/page_accueil.html
@@ -40,7 +40,7 @@
                         }
                     } else {
                         console.error("Erreur lors de la récupération des détails de l'utilisateur");
-                        document.getElementById('welcomeMessage').textContent = `Bienvenue, ${username} !`;
+                        document.getElementById('welcomeMessage').textContent = `Bonjour ${username} !`;
                     }
                 } catch (error) {
                     console.error("Erreur lors de la communication avec l'API:", error);
